Add full module name support and newexample test target
- Generator: use full module name (sokol.app) for LuaCATS types and metatables
- LuaCatsGen: local M = {} / return M pattern for dot-separated names
- CBindingGen: store original table as uservalue in StructNew
- App.cs: derive metatable names dynamically from reg.ModuleName
- Program.cs: derive output filenames from module name
- newexample: standalone test target for Generator output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -516,3 +516,6 @@ if(MANE3D_BUILD_TESTS)
         target_compile_definitions(mane3d-test PRIVATE MANE3D_HAS_SHDC)
     endif()
 endif()
+
+# New example (Generator output test)
+add_subdirectory(newexample)
