Add Clang AST parsing to Generator, remove test.json
- Add ClangRunner to parse headers via clang -ast-dump=json
- Add IModule interface for module definitions
- Convert App to IModule instance class
- Use C constant names in enum bindings
- Add System.CommandLine for argument parsing
- Update CMakeLists to find clang and pass --deps
- Delete test.json (no longer needed)

--- a/newexample/CMakeLists.txt
+++ b/newexample/CMakeLists.txt
@@ -1,7 +1,38 @@
+set(GENERATOR_DIR "${PROJECT_SOURCE_DIR}/Generator")
+set(GEN_DIR "${PROJECT_SOURCE_DIR}/newgen")
+set(GENERATOR_OUTPUT_C "${GEN_DIR}/sokol_app.c")
+set(GENERATOR_OUTPUT_LUA "${GEN_DIR}/sokol_app.lua")
+
+find_program(DOTNET_EXECUTABLE dotnet REQUIRED)
+find_program(CLANG_EXECUTABLE NAMES clang clang.exe
+    HINTS "${CLANGPP_EXECUTABLE}/.."
+    REQUIRED)
+
+add_custom_command(
+    OUTPUT ${GENERATOR_OUTPUT_C} ${GENERATOR_OUTPUT_LUA}
+    COMMAND ${DOTNET_EXECUTABLE} run --project ${GENERATOR_DIR} --
+        ${GEN_DIR}
+        --deps ${PROJECT_SOURCE_DIR}/deps
+        --clang ${CLANG_EXECUTABLE}
+    DEPENDS
+        ${PROJECT_SOURCE_DIR}/deps/sokol/sokol_app.h
+        ${GENERATOR_DIR}/Program.cs
+        ${GENERATOR_DIR}/IModule.cs
+        ${GENERATOR_DIR}/Pipeline.cs
+        ${GENERATOR_DIR}/TypeRegistry.cs
+        ${GENERATOR_DIR}/ClangAst.cs
+        ${GENERATOR_DIR}/CBinding.cs
+        ${GENERATOR_DIR}/CBindingGen.cs
+        ${GENERATOR_DIR}/LuaCats.cs
+        ${GENERATOR_DIR}/LuaCatsGen.cs
+        ${GENERATOR_DIR}/Modules/Sokol/App.cs
+    COMMENT "Running Generator (header -> bindings)"
+)
+
 add_executable(newexample WIN32
     main.c
     sokol_impl.c
-    ${PROJECT_SOURCE_DIR}/Generator/sokol_app.c
+    ${GENERATOR_OUTPUT_C}
 )
 
 target_include_directories(newexample PRIVATE
@@ -21,10 +52,4 @@ elseif(MANE3D_BACKEND_GL OR (UNIX AND NOT APPLE))
     target_compile_definitions(newexample PRIVATE SOKOL_GLCORE)
 elseif(MANE3D_BACKEND_METAL OR APPLE)
     target_compile_definitions(newexample PRIVATE SOKOL_METAL)
-endif()
-
-# Working directory for Visual Studio debugger
-if(WIN32)
-    set_target_properties(newexample PROPERTIES
-        VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/newexample")
 endif()
