--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
-  "workspace.library": ["newgen"],
+  "workspace.library": ["gen/types", "types", "lib"],
   "workspace.ignoreDir": [
     "build",
     "out",
