--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "deps/miniaudio"]
 	path = deps/miniaudio
 	url = https://github.com/mackron/miniaudio.git
+[submodule "deps/luafilesystem"]
+	path = deps/luafilesystem
+	url = https://github.com/lunarmodules/luafilesystem
