--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "deps/luafilesystem"]
 	path = deps/luafilesystem
 	url = https://github.com/lunarmodules/luafilesystem
+[submodule "deps/box2d"]
+	path = deps/box2d
+	url = https://github.com/erincatto/box2d.git
