Enable Box2D by default and unify example assets gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ gen/
 
 # External assets (not licensed for redistribution)
 assets/
-!examples/hakonotaiatari/assets/
+!examples/*/assets/
 
 # .NET
 **/bin/
