WASM ファイルシステム統一 + miniaudio VFS 対応
- lub3d.fs C モジュール新規追加 (read/write/exists/mtime/dir)
  - WASM: 同期 XHR (fetch_file)、Native: fopen/stat/opendir
  - examples/main.c の fetch_file を src/lub3d_fs.c に移動
- miniaudio VFS (Lua コールバック) 対応
  - ma.VfsNew() で Lua テーブル→C ma_vfs_callbacks 橋渡し
  - ma.EngineInit(config) で config userdata 受取対応
  - lib/audio.lua 共通エンジン生成 (WASM VFS 自動切替)
- Generator 拡張
  - GenBindingFieldInit: VoidPtr/Ptr(Void) → lua_touserdata
  - OpaqueConstructor: ConfigType userdata 引数対応
  - ma_engine_config struct バインディング生成
- Lua ファイル操作を fs モジュールに統一
  - fetch_file/io.open/get_mtime → fs.read/fs.write/fs.mtime
  - stb.load 分岐 → fs.read + stb.load_from_memory
  - hakonotaiatari 音声を miniaudio に移行
- WGSL shader binding 修正 (wgsl_group1_binding_n)
- luafilesystem サブモジュール削除
- .editorconfig / .stylua.toml 追加

--- a/.luarc.json
+++ b/.luarc.json
@@ -13,7 +13,13 @@
     "frame",
     "cleanup",
     "event",
-    "get_mtime",
     "_headless_frames"
-  ]
+  ],
+  "diagnostics.neededFileStatus": {
+    "param-type-mismatch": "Any",
+    "undefined-field": "Any",
+    "missing-parameter": "Any",
+    "redundant-parameter": "Any",
+    "codestyle-check": "Any"
+  }
 }
