--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "deps/box2d"]
 	path = deps/box2d
 	url = https://github.com/erincatto/box2d.git
+[submodule "deps/HandmadeMath"]
+	path = deps/HandmadeMath
+	url = https://github.com/HandmadeMath/HandmadeMath.git
