ci: post Generator metrics as PR comment

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,10 +27,26 @@ jobs:
       - name: Post Generator metrics to summary
         if: always()
         run: |
-          echo '## Generator Metrics' >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          sed -n '/^=== Generator Metrics ===/,/^TOTAL/p' /tmp/generator-output.txt >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+          {
+            echo '## Generator Metrics'
+            echo '```'
+            sed -n '/^=== Generator Metrics ===/,/^TOTAL/p' /tmp/generator-output.txt
+            echo '```'
+          } | tee /tmp/metrics-comment.md >> $GITHUB_STEP_SUMMARY
+
+      - name: Comment metrics on PR
+        if: github.event_name == 'pull_request'
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          PR=${{ github.event.pull_request.number }}
+          # Delete previous bot comment if exists
+          gh api "repos/${{ github.repository }}/issues/${PR}/comments" \
+            --jq '.[] | select(.user.login == "github-actions[bot]" and (.body | startswith("## Generator Metrics"))) | .id' \
+          | while read id; do
+              gh api -X DELETE "repos/${{ github.repository }}/issues/comments/${id}"
+            done
+          gh pr comment "${PR}" --body-file /tmp/metrics-comment.md
 
       - name: Setup Lua Language Server
         run: |
