ci: add pull-requests write permission for PR comment

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,6 +4,9 @@ on:
     branches: [master]
   pull_request:
 
+permissions:
+  pull-requests: write
+
 jobs:
   lua-lint:
     runs-on: ubuntu-latest
